--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-draggable": "^4.4.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "reactflow": "^11.3.2",
     "sort-by": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
